# axiom

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DESIGN_SPEC.md  ENFORCEMENT.md  README.md  RUST_CONVENTIONS.md  audit-error-handling.md  clippy.toml  showcase.ax  test_bs.ax  test_div.ax
crates/axiom-cli/: Cargo.toml  README.md
crates/axiom-cli/src/: check.rs  cli.rs  harness.rs  lib.rs  main.rs
crates/axiom-cli/tests/: features.rs  fixture_coverage.rs
crates/axiom-hir/: Cargo.toml  README.md
crates/axiom-hir/examples/: hir.rs
crates/axiom-hir/src/: desugar.rs  error.rs  hir.rs  intrinsic.rs  lang.rs  lib.rs  resolve.rs  serialize.rs
crates/axiom-hir/src/desugar/: mod.rs  tests.rs
crates/axiom-hir/src/hir/: items.rs  mod.rs  ty.rs
crates/axiom-hir/src/lower/: block.rs  expr.rs  item.rs  mod.rs  pattern.rs  ty.rs
crates/axiom-hir/src/resolve/: body.rs  item.rs  mod.rs
crates/axiom-hir/src/serialize/: escape.rs  mod.rs
crates/axiom-hir/tests/: block_tail.rs  diagnostics.rs  fuzz.rs  golden.rs  invariants.rs  multi_file_golden.rs  slice_types.rs  traits.rs
crates/axiom-hir/tests/fixtures/: assignments.ax  assignments.hir  bindings.hir  control_flow.ax  control_flow.hir  functions.hir  hello.hir  match_patterns.ax  match_patterns.hir  methods.ax  methods.hir  struct_field_access.hir  struct_literal.ax  struct_literal.hir  structs.ax  structs.hir  structs_enums_match.hir
crates/axiom-ir/: Cargo.toml
crates/axiom-ir/examples/: ir.rs
crates/axiom-ir/src/: invariants.rs  ir.rs
crates/axiom-ir/src/lower/: assign.rs  expr.rs  helpers.rs  item.rs  mod.rs  stmt.rs
crates/axiom-ir/src/serialize/: helpers.rs  mod.rs
crates/axiom-ir/tests/: desugar_coverage.rs  golden.rs  invariants.rs
crates/axiom-ir/tests/desugar_goldens/: index_assign.ir  list_literal.ir
crates/axiom-ir/tests/fixtures/: arithmetic.ax  arithmetic.ir  bindings.ax  control_flow.ir  functions.ax  functions.ir  generics.ir  hello.ir  int_match.ax  int_match.ir  loops.ax  loops.ir  match_expr.ir  methods.ax  methods.ir  multi_fn.ir  structs.ir  structs_enums_match.ir  traits.ir
crates/axiom-parser/: Cargo.toml  README.md
crates/axiom-parser/examples/: parse.rs
crates/axiom-parser/src/: ast.rs  error.rs  event.rs  green.rs  invariants.rs  lib.rs  parser.rs  snapshot.rs  syntax.rs  syntax_kind.rs
crates/axiom-parser/src/ast/: expr.rs  expr_part.rs  item.rs  item_part.rs  mod.rs  stmt.rs  tests.rs  ty.rs
crates/axiom-parser/src/grammar/: expr.rs  item.rs  mod.rs  pattern.rs  stmt.rs  ty.rs
crates/axiom-parser/tests/: diagnostics.rs  fuzz.rs  golden.rs  invariants.rs  precedence.rs
crates/axiom-parser/tests/fixtures/: attributes.ax  bindings.ast  closures_scope.ast  closures_scope.ax  comments.ast  functions.ast  hello.ast  loops.ast  match.ast  match.ax  methods.ast  methods.ax  option_try.ax  traits.ast  (+1 more)
crates/axiom-stdlib/: Cargo.toml  README.md  build.rs
crates/axiom-stdlib/src/: lib.rs
crates/axiom-typeck/: Cargo.toml  README.md
crates/axiom-typeck/examples/: typeck.rs
crates/axiom-typeck/src/: coverage.rs  error.rs  exhaustiveness.rs  lib.rs  serialize.rs  stdlib.rs  thir.rs  typeck.rs  types.rs
crates/axiom-typeck/tests/: bounds.rs  builtin_traits.rs  collections.rs  diagnostics.rs  extern_fn.rs  format.rs  fuzz.rs  generics.rs  golden.rs  heap_buffer.rs  invariants.rs  lang_items.rs  mono.rs  traits.rs
crates/axiom-vm/: Cargo.toml  README.md
crates/axiom-vm/src/: error.rs  frame.rs  lib.rs  trace.rs  value.rs
crates/axiom-vm/tests/: core_traits_e2e.rs  format_e2e.rs  generic_enum_e2e.rs  generic_struct_e2e.rs  golden.rs  heap_buffer_e2e.rs  inout_e2e.rs  invariants.rs  list_e2e.rs  map_e2e.rs  mutable_subscript_e2e.rs  option_prelude_e2e.rs  place_assign_e2e.rs  place_assign_matrix.rs  string_len_e2e.rs  subscript_e2e.rs  trait_default_e2e.rs  trait_method_typeparam_e2e.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: check.rs  cli.rs  harness.rs  lib.rs  main.rs
crates/cli/tests/: features.rs  fixture_coverage.rs
crates/driver/: Cargo.toml  README.md
crates/driver/src/: lib.rs
crates/driver/tests/: driver_tests.rs
crates/hir/: Cargo.toml  README.md
crates/hir/examples/: hir.rs
crates/hir/src/: lib.rs
crates/hir/tests/: block_tail.rs  diagnostics.rs  fuzz.rs  golden.rs  multi_file_golden.rs  slice_types.rs  traits.rs
crates/ir/: Cargo.toml  README.md
crates/ir/examples/: ir.rs
crates/ir/src/: invariants.rs  ir.rs  lib.rs
crates/ir/tests/: desugar_coverage.rs  golden.rs  invariants.rs
crates/lower/: Cargo.toml  README.md
crates/lower/src/: error.rs  lib.rs
crates/lower/tests/: block_tail.rs  diagnostics.rs  fuzz.rs  golden.rs  invariants.rs  multi_file_golden.rs  slice_types.rs  traits.rs
crates/parser/: Cargo.toml  README.md
crates/parser/examples/: parse.rs
crates/parser/src/: error.rs  event.rs  invariants.rs  lib.rs  parser.rs  syntax.rs  syntax_kind.rs
crates/parser/tests/: diagnostics.rs  fuzz.rs  golden.rs  invariants.rs  precedence.rs
crates/resolver/: Cargo.toml  README.md
crates/resolver/src/: intrinsic.rs  lang.rs  lib.rs
crates/stdlib/: Cargo.toml  README.md  build.rs
crates/stdlib/src/: lib.rs
crates/typecheck/: Cargo.toml  README.md
crates/typecheck/examples/: typeck.rs
crates/typecheck/src/: coverage.rs  error.rs  exhaustiveness.rs  lib.rs  mono_types.rs  thir.rs  types.rs
crates/typecheck/tests/: bounds.rs  builtin_traits.rs  collections.rs  diagnostics.rs  extern_fn.rs  format.rs  fuzz.rs  generics.rs  golden.rs  heap_buffer.rs  invariants.rs  lang_items.rs  mono.rs  orphan.rs  traits.rs
crates/vm/: Cargo.toml  README.md
crates/vm/src/: frame.rs  lib.rs  trace.rs  value.rs
crates/vm/tests/: core_traits_e2e.rs  format_e2e.rs  generic_enum_e2e.rs  generic_struct_e2e.rs  golden.rs  heap_buffer_e2e.rs  inout_e2e.rs  iterator_e2e.rs  list_e2e.rs  map_e2e.rs  mutable_subscript_e2e.rs  option_prelude_e2e.rs  output_assertion_guard.rs  place_assign_e2e.rs  place_assign_matrix.rs  string_len_e2e.rs  subscript_e2e.rs  trait_default_e2e.rs  trait_method_typeparam_e2e.rs
(+581 files in other folders)
