[workspace]
resolver = "2"
members = []
# Add crates here as they are created, e.g. members = ["crates/axiom-core"].
#
# EVERY crate MUST opt into the lint policy below by adding to its Cargo.toml:
#
#     [lints]
#     workspace = true
#
# EXCEPTION: the future codegen/FFI crate is the ONLY place `unsafe` is permitted.
# It does NOT inherit `unsafe_code = "forbid"`; instead it defines its own [lints]
# block that keeps every clippy deny but sets `unsafe_code = "allow"`. This crate
# split is what makes the unsafe ban a hard, compiler-enforced boundary (see
# ENFORCEMENT.md). `forbid` cannot be bypassed with a local #[allow], by design.

[workspace.package]
edition = "2021"
license = "MIT"

# ───────────────────────────────────────────────────────────────────────────
# Centralized lint policy — LAYERS 1 & 3 of enforcement (see ENFORCEMENT.md).
# Crates opt in via `[lints] workspace = true`.
# ───────────────────────────────────────────────────────────────────────────
[workspace.lints.rust]
# HARD ban on unsafe everywhere that inherits this. `forbid` cannot be locally
# overridden with #[allow(unsafe_code)] — that is the whole point. Only the
# dedicated codegen crate opts out (see note above).
unsafe_code = "forbid"

[workspace.lints.clippy]
# Panic-prone calls — denied on all paths. Use Result + `?`.
# A genuine internal-invariant `.expect("why")` is allowed only with an explicit,
# justified per-line `#[allow(clippy::expect_used)]` — i.e. a LOUD, deliberate
# bypass, never a silent one. (Test modules may `#![allow(clippy::unwrap_used)]`.)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
# Allowed: for structurally-impossible enum arms, with an explanatory message.
unreachable = "allow"

[workspace.dependencies]
# Centralized dependency versions live here as crates are added, e.g.:
# thiserror = "2"
