[workspace]
resolver = "2"
members = [
    "crates/lexer",
    "crates/parser",
    "crates/lower",
    "crates/resolver",
    "crates/typecheck",
    "crates/stdlib",
    "crates/ir",
    "crates/cli",
    "crates/vm",
    "crates/modules",
    "crates/driver",
    "crates/specialize",
]
# EVERY crate MUST opt into the lint policy below by adding to its Cargo.toml:
#
#     [lints]
#     workspace = true
#
# EXCEPTION: the future codegen/FFI crate is the ONLY place `unsafe` is permitted.
# It does NOT inherit `unsafe_code = "forbid"`; instead it defines its own [lints]
# block that keeps every clippy deny but sets `unsafe_code = "allow"`. This crate
# split is what makes the unsafe ban a hard, compiler-enforced boundary (see
# ENFORCEMENT.md). `forbid` cannot be bypassed with a local #[allow], by design.

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "allow"
too_many_lines = "deny"
too_many_arguments = "deny"
cognitive_complexity = "warn"

[workspace.dependencies]
thiserror = "2"