[package]
name = "axiom-cli"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[[bin]]
name = "axiom"
path = "src/main.rs"

[dependencies]
axiom-driver = { path = "../driver" }
axiom-hir = { path = "../axiom-hir" }
axiom-ir = { path = "../axiom-ir" }
axiom-modules = { path = "../axiom-modules" }
axiom-parser = { path = "../axiom-parser" }
axiom-stdlib = { path = "../axiom-stdlib" }
axiom-typeck = { path = "../axiom-typeck" }
axiom-vm = { path = "../axiom-vm" }
thiserror = { workspace = true }
