[package]
name = "axiom-stdlib"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[build-dependencies]
phf = { version = "0.11", features = ["macros"] }

[dependencies]
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
axiom-modules = { path = "../axiom-modules" }
