[package]
name = "axiom-typeck"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
axiom-hir = { path = "../axiom-hir" }
axiom-lexer = { path = "../axiom-lexer" }
thiserror = { workspace = true }

[dev-dependencies]
axiom-parser = { path = "../axiom-parser" }

[[example]]
name = "typeck"
path = "examples/typeck.rs"