[package]
name = "axiom-typeck"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
axiom-hir = { path = "../axiom-hir" }
axiom-lexer = { path = "../axiom-lexer" }
axiom-parser = { path = "../axiom-parser" }
thiserror = { workspace = true }

[dev-dependencies]
axiom-modules = { path = "../axiom-modules" }
axiom-stdlib = { path = "../axiom-stdlib" }

[[example]]
name = "typeck"
path = "examples/typeck.rs"