[package]
name = "axiom-vm"
version = "0.1.0"
edition.workspace = true
description = "Register-IR interpreter for Axiom"

[dependencies]
axiom-hir = { path = "../axiom-hir" }
axiom-ir = { path = "../axiom-ir" }
axiom-typeck = { path = "../axiom-typeck" }
thiserror.workspace = true

[lints]
workspace = true
