[package]
name = "axiom-driver"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
axiom-hir = { path = "../axiom-hir" }
axiom-lexer = { path = "../axiom-lexer" }
axiom-parser = { path = "../axiom-parser" }
axiom-stdlib = { path = "../axiom-stdlib" }
axiom-typeck = { path = "../axiom-typeck" }
thiserror = { workspace = true }
