[package]
name = "driver"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
lower = { path = "../lower" }
resolver = { path = "../resolver" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
stdlib = { path = "../stdlib" }
typecheck = { path = "../typecheck" }
thiserror = { workspace = true }
