[package]
name = "hir"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
lower = { path = "../lower" }
resolver = { path = "../resolver" }
parser = { path = "../parser" }
lexer = { path = "../lexer" }

[dev-dependencies]
modules = { path = "../modules" }
