[package]
name = "ir"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
hir = { path = "../hir" }
typecheck = { path = "../typecheck" }
lexer = { path = "../lexer" }
thiserror = { workspace = true }

[dev-dependencies]
driver = { path = "../driver" }
parser = { path = "../parser" }
stdlib = { path = "../stdlib" }

[[example]]
name = "ir"
path = "examples/ir.rs"
