[package]
name = "axiom-lower"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
axiom-parser = { path = "../axiom-parser" }
axiom-lexer = { path = "../axiom-lexer" }
thiserror = { workspace = true }

[dev-dependencies]
axiom-modules = { path = "../axiom-modules" }
axiom-parser = { path = "../axiom-parser" }
