[package]
name = "lower"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
parser = { path = "../parser" }
lexer = { path = "../lexer" }
thiserror = { workspace = true }

[dev-dependencies]
modules = { path = "../modules" }
parser = { path = "../parser" }
resolver = { path = "../resolver" }
