[package]
name = "axiom-resolver"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
axiom-lower = { path = "../lower" }
axiom-lexer = { path = "../axiom-lexer" }
thiserror = { workspace = true }

[dev-dependencies]
axiom-parser = { path = "../axiom-parser" }
