[package]
name = "resolver"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
lower = { path = "../lower" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
thiserror = { workspace = true }

[dev-dependencies]
parser = { path = "../parser" }
