[package]
name = "typecheck"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
lower = { path = "../lower" }
resolver = { path = "../resolver" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
thiserror = { workspace = true }

[dev-dependencies]
driver = { path = "../driver" }
modules = { path = "../modules" }
stdlib = { path = "../stdlib" }

[[example]]
name = "typeck"
path = "examples/typeck.rs"