[package]
name = "vm"
version = "0.1.0"
edition.workspace = true
description = "Register-IR interpreter for Axiom"

[dependencies]
lower = { path = "../lower" }
resolver = { path = "../resolver" }
ir = { path = "../ir" }
typecheck = { path = "../typecheck" }
thiserror.workspace = true

[dev-dependencies]
driver = { path = "../driver" }
parser = { path = "../parser" }
stdlib = { path = "../stdlib" }

[lints]
workspace = true
